# ShopEasy

./: .env.local.exemple  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.ci.yml  docker-compose.yml  start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: github-pipeline.yml
backend/: Dockerfile  data.json  entrypoint.sh  pyproject.toml  requirements.txt
backend/api/: exceptions.py  filters.py  serializers.py  signals.py  urls.py
backend/api/logic/: __init__.py  commande.py  paiement.py  panier.py  produit.py
backend/api/models/: admin.py  models.py
backend/api/models/migrations/: 0001_init_models.py  0001_initial.py  0002_alter_image_lien.py  0003_alter_image_lien.py
backend/api/serializer/: categorie.py  client.py  produit.py  produit_panier.py
backend/api/static/: user_create_validation_consts.py
backend/api/views/: views.py
backend/backend/backend_models/: models.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py
backend/tests/: test_suite.py
backend/tests/api/: test_commande.py  test_produit.py  test_produit_panier.py
db/: Database-diagrams.md
docs/: API.md  Architecture.md  DEFINITION_OF_DONE.md  Ressources.md  TESTING.md
frontend/: .prettierrc  Dockerfile  entrypoint.sh  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  RouteList.jsx  index.css  main.jsx
frontend/src/api/: authentification.js  categorie.js  constants.js  helpers.js  produits.js
frontend/src/components/: CategoryFilters.jsx  (+4 more)
(+55 files in other folders)
